Update Assessment Required Popup Layout and Styling

--- a/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
+++ b/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
@@ -3,39 +3,51 @@
     Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
 }}
 <form class="simple-modal__body">
-    <div class="attachment-modal__field">
-        <h6 class="attachment-modal__field-title">{{content.title}}</h6>
-        <div class="attachment-modal__field-value">
-          {{#if isPerson}}
-              <person-info {person-obj}="content.value"></person-info>
-          {{else}}
-              <read-more {text}="content.value"></read-more>
-          {{/if}}
+    <div class="simple-modal__section">
+        <div class="field__title form-field__title">
+          <label class="field__title-text" for="form-field-{{caIds.defId}}">{{content.title}}</label>
         </div>
+          <auto-save-form-field
+            {type}="content.type"
+            {value}="content.value"
+            {field-id}="caIds.defId"
+            {options}="content.options"
+            {disabled}="true"
+          ></auto-save-form-field>
     </div>
-    <div class="simple-modal__controls">
       {{#if comment}}
-          <assessment-add-comment {instance}="instance" {(is-empty)}="isEmpty" {(state)}="state" {ca-ids}="caIds"
-                                  comment-place-holder="Enter comment"></assessment-add-comment>
+          <div class="simple-modal__section">
+            <div class="simple-modal__section-title">Comment</div>
+              <assessment-add-comment
+                {instance}="instance"
+                {(is-empty)}="isEmpty"
+                {(state)}="state"
+                {ca-ids}="caIds"
+                {(context-scope)}="content.contextScope"
+                comment-place-holder="Enter comment"
+              ></assessment-add-comment>
+          </div>
       {{/if}}
       {{#if evidence}}
-        <related-documents {instance}="instance" document-type="EVIDENCE">
-            <h6>Evidence</h6>
-            <object-list {items}="documents" {empty-message}="noItemsText">
-                <editable-document-object-list-item {document}="{.}">
-                </editable-document-object-list-item>
-            </object-list>
-            <attach-button (refresh-evidences)="loadDocuments()" {instance}="instance">
-            </attach-button>
-        </related-documents>
+        <div class="simple-modal__section">
+          <related-documents {instance}="instance" document-type="EVIDENCE">
+              <h6>Evidence</h6>
+              <object-list {items}="documents" {empty-message}="noItemsText">
+                  <editable-document-object-list-item {document}="{.}">
+                  </editable-document-object-list-item>
+              </object-list>
+              <attach-button (refresh-evidences)="loadDocuments()" {instance}="instance">
+              </attach-button>
+          </related-documents>
+        </div>
       {{/if}}
     </div>
 </form>
 <div class="simple-modal__footer">
-    <div class="flex-box flex-row-reverse">
+    <div class="simple-modal__toolbar">
       {{#if comment}}
-          <button class="btn btn-small btn-green" {{#if isEmpty}}disabled{{/if}} ($click)="saveAttachments">Save</button>
+          <button class="btn btn-small btn-green simple-modal__toolbar-item" {{#if isEmpty}}disabled{{/if}} ($click)="saveAttachments">Save</button>
       {{/if}}
-        <button class="btn btn-link btn-small" ($click)="hide">Close</button>
+        <button class="btn btn-small btn-white simple-modal__toolbar-item" ($click)="hide">Close</button>
     </div>
 </div>
