Add document-object-list on cylce_task_entries

--- a/src/ggrc/assets/stylesheets/modules/_comments.scss
+++ b/src/ggrc/assets/stylesheets/modules/_comments.scss
@@ -72,10 +72,12 @@
         margin-top: 7px;
       }
     }
+    .evidence-list {
+      margin-top: 5px;
+    }
     .entry-attachment {
       &.tree-item-add {
         display: inline-block;
-        margin: 0px 0 0px -6px;
         i {
           margin-top: 1px;
         }
