--- a/src/ggrc/assets/mustache/assessments/related-assessments.mustache
+++ b/src/ggrc/assets/mustache/assessments/related-assessments.mustache
@@ -82,7 +82,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                                 </related-audits>
                             </div>
                             <div class="flex-size-3">
-                                <related-attachments-and-urls {instance}="instance">
+                                <related-documents {instance}="instance" {^is-loading}="loadingState.attachmentsLoading">
                                     <object-list {items}="documents">
                                         <reusable-objects-item {instance}="{.}"
                                                             {is-saving}="isSaving"
@@ -92,7 +92,7 @@ Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
                                             <document-object-list-item {instance}="instance"></document-object-list-item>
                                         </reusable-objects-item>
                                     </object-list>
-                                </related-attachments-and-urls>
+                                </related-documents>
                             </div>
                             <div class="grid-data__action-column">
                                 <button class="btn btn-icon btn-icon-sm" title="Show More Information"><i
