Remove document-objects-list's header

--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -33,9 +33,8 @@
                     </div>
                     <div class="assessment-controls__extra-controls">
                         <div>
+                            <h6>Evidence</h6>
                             <document-object-list
-                                tooltip="You can upload up to 10 files in a single batch"
-                                header="Evidence"
                                 {documents}="evidences"
                                 {instance}="instance">
                                     <editable-document-object-list-item {document}="{.}">
