--- a/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
+++ b/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
@@ -27,8 +27,8 @@
     <div class="row-fluid wrap-row">
       <div class="span4">
         <related-documents {instance}="instance" {document-type}="2">
+          <h6>Supporting files</h6>
           <document-object-list
-              header="Supporting files"
               {documents}="documents"
               {instance}="instance">
             <editable-document-object-list-item {document}="{.}">
