--- a/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
+++ b/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
@@ -20,9 +20,8 @@
       {{/if}}
       {{#if evidence}}
         <related-documents {instance}="instance" {document-type}="2">
+            <h6>Evidence</h6>
             <document-object-list
-                tooltip="You can upload up to 10 files in a single batch"
-                header="Evidence"
                 {documents}="documents"
                 {instance}="instance">
                 <editable-document-object-list-item {document}="{.}">
