--- a/src/ggrc/assets/mustache/issues/info.mustache
+++ b/src/ggrc/assets/mustache/issues/info.mustache
@@ -24,9 +24,8 @@
         <div class="span6"></div>
         <div class="span6">
           <related-documents {instance}="instance" {document-type}="2">
+            <h6>Evidence</h6>
             <document-object-list
-                tooltip="You can upload up to 10 files in a single batch"
-                header="Evidence"
                 {documents}="documents"
                 {instance}="instance">
               <editable-document-object-list-item {document}="{.}">
