Synchronize Invalid State for Assessment to avoid view misbehavior

--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -58,6 +58,7 @@
                                     {^saving}="formState.saving"
                                     {^all-saved}="formState.allSaved"
                                     {^is-dirty}="formState.isDirty"
+                                    {^has-validation-errors}="instance.hasValidationErrors"
                                     {evidence-amount}="instance.documents.length"
                                     (validation-changed)="showRequiredInfoModal(%event)"
                     ></auto-save-form>
