--- a/src/ggrc/assets/mustache/issues/info.mustache
+++ b/src/ggrc/assets/mustache/issues/info.mustache
@@ -25,9 +25,7 @@
         <div class="span6">
           <related-documents {instance}="instance" {document-type}="2">
             <h6>Evidence</h6>
-            <document-object-list
-                {documents}="documents"
-                {instance}="instance">
+            <object-list {items}="documents" {empty-message}="noItemsText">
               <editable-document-object-list-item {document}="{.}">
                 <unmap-button
                   {unmaped-callback}="@loadDocuments" 
@@ -38,7 +36,7 @@
                   </action-toolbar-control>
                 </unmap-button>
               </editable-document-object-list-item>
-            </document-object-list>
+            </object-list>
             <attach-button {updated-callback}="@loadDocuments" {instance}="instance">
             </attach-button>
           </related-documents>
