--- a/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
+++ b/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
@@ -31,7 +31,7 @@
           <object-list {items}="documents" {empty-message}="noItemsText">
             <editable-document-object-list-item {document}="{.}">
               <unmap-button
-                {unmaped-callback}="@loadDocuments" 
+                (unmapped)="loadDocuments()"
                 {destination}="instance"
                 {source}="document">
                 <action-toolbar-control>
