--- a/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
+++ b/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
@@ -19,7 +19,7 @@
                                   comment-place-holder="Enter comment"></assessment-add-comment>
       {{/if}}
       {{#if evidence}}
-        <related-documents {instance}="instance" {document-type}="2">
+        <related-documents {instance}="instance" document-type="EVIDENCE">
             <h6>Evidence</h6>
             <object-list {items}="documents" {empty-message}="noItemsText">
                 <editable-document-object-list-item {document}="{.}">
