--- a/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
+++ b/src/ggrc_risk_assessments/assets/mustache/risk_assessments/info.mustache
@@ -26,7 +26,7 @@
 
     <div class="row-fluid wrap-row">
       <div class="span4">
-        <related-documents {instance}="instance" {document-type}="2">
+        <related-documents {instance}="instance" document-type="EVIDENCE">
           <h6>Supporting files</h6>
           <object-list {items}="documents" {empty-message}="noItemsText">
             <editable-document-object-list-item {document}="{.}">
