--- a/src/ggrc_workflows/assets/mustache/cycle_task_entries/tree.mustache
+++ b/src/ggrc_workflows/assets/mustache/cycle_task_entries/tree.mustache
@@ -12,7 +12,7 @@
   <div class="w-status">
     {{{instance.description}}}
     <div class="evidence-list">
-      <related-documents {instance}="instance" {document-type}="2">
+      <related-documents {instance}="instance" document-type="EVIDENCE">
         <object-list {items}="documents">
           <editable-document-object-list-item {document}="{.}">
             {{^if_equals parentInstance.status 'Verified'}}
