--- a/src/ggrc/assets/mustache/components/folder-attachments-list/folder-attachments-list.mustache
+++ b/src/ggrc/assets/mustache/components/folder-attachments-list/folder-attachments-list.mustache
@@ -3,92 +3,81 @@
     Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
 }}
 
-<h6 class="attachments-list-control">
-    <span class="attachments-list-title">
-      {{title}}
-    </span>
-</h6>
-{{#is_allowed 'update' instance context='for'}}
-  <ggrc-gdrive-folder-picker hide-label="true"
-                             sub-label="Folder"
-                             readonly="readonly"
-                             instance="instance"
-                             {(is-revision-folder-loaded)}="isRevisionFolderLoaded"
-  ></ggrc-gdrive-folder-picker>
-{{/is_allowed}}
-{{^if_null instance._mandatory_attachment_msg}}
-  <div class="alert alert-info alert-dismissible" role="alert">
-    {{instance._mandatory_attachment_msg}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">&times;</button>
-  </div>
-{{/if_null}}
+<related-documents {instance}="instance" document-type="EVIDENCE">
+    <h6>Evidence</h6>
 
-  {{#if subLabel}}
-    <span class="sub-label">
-      {{subLabel}}:
-    </span>
-  {{/if}}
-
-  <directly-mapped-objects
-    {(is-attachments-loaded)}="isAttachmentsLoaded"
-    items="documents"
-    model-name="Document"
-    parent-instance="instance">
-      <action-toolbar {document}="{.}" class="action-toolbar">
-          <document-object-list-item {instance}="document"></document-object-list-item>
-          {{#if showAction}}
-              <div class="action-toolbar__controls">
-                  {{#unless readonly}}
-                    {{#is_allowed 'update' instance context='for'}}
-                      <action-toolbar-control>
-                          <unmap-button {destination}="instance" {source}="document"
-                                        object-prop="object_documents" mapping-type="ObjectDocument">
-                              <i class="fa fa-trash"></i>
-                          </unmap-button>
-                      </action-toolbar-control>
-                    {{/is_allowed}}
-                  {{/unless}}
-              </div>
-          {{/if}}
-      </action-toolbar>
-  </directly-mapped-objects>
-
-
-{{#unless readonly}}
     {{#is_allowed 'update' instance context='for'}}
-        <span class="attachments-list-action" rel="tooltip" data-original-title="{{tooltip}}">
-            {{#with_mapping 'extended_folders' instance}}
-                {{#if extended_folders.length}}
-                    <ggrc-gdrive-picker-launcher
-                            instance="instance"
-                            {items-uploaded-callback}="@itemsUploadedCallback"
-                            click_event="trigger_upload_parent">
-                        Attach
-                    </ggrc-gdrive-picker-launcher>
-                {{else}}
-                    {{#unless denyNoFolder}}
+        <ggrc-gdrive-folder-picker hide-label="true"
+                                    sub-label="Folder"
+                                    readonly="readonly"
+                                    instance="instance"
+                                    {(is-revision-folder-loaded)}="isRevisionFolderLoaded"
+        ></ggrc-gdrive-folder-picker>
+    {{/is_allowed}}
+    {{^if_null instance._mandatory_attachment_msg}}
+        <div class="alert alert-info alert-dismissible" role="alert">
+            {{instance._mandatory_attachment_msg}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">&times;</button>
+        </div>
+    {{/if_null}}
+
+    {{#if subLabel}}
+        <span class="sub-label">
+            {{subLabel}}:
+        </span>
+    {{/if}}
+
+    <object-list {items}="documents" {empty-message}="noItemsText">
+        <editable-document-object-list-item {document}="{.}">
+        {{#unless readonly}}
+            <unmap-button
+                (unmapped)="loadDocuments()"
+                {destination}="instance"
+                {source}="document">
+                <action-toolbar-control>
+                <i class="fa fa-trash"></i>
+                </action-toolbar-control>
+            </unmap-button>
+        {{/unless}}
+        </editable-document-object-list-item>
+    </object-list>
+    
+    {{#unless readonly}}
+        {{#is_allowed 'update' instance context='for'}}
+            <span class="attachments-list-action" rel="tooltip" data-original-title="{{tooltip}}">
+                {{#with_mapping 'extended_folders' instance}}
+                    {{#if extended_folders.length}}
                         <ggrc-gdrive-picker-launcher
                                 instance="instance"
-                                {items-uploaded-callback}="@itemsUploadedCallback"
-                                click_event="trigger_upload">
-                                Attach
+                                {items-uploaded-callback}="@loadDocuments"
+                                click_event="trigger_upload_parent">
+                            Attach
                         </ggrc-gdrive-picker-launcher>
-                    {{/unless}}
-                {{/if}}
-            {{else}}
-            {{! This is a failure state for with_mapping, if something in the mapping doesn't refresh properly }}
-                {{#if error.errors}}
-                    <small>
-                        You need permission to upload files to the audit folder.
-                        <a href="https://drive.google.com/folderview?id={{grdive_msg_to_id error.message}}&amp;usp=sharing#">Request access.</a>
-                    </small>
+                    {{else}}
+                        {{#unless denyNoFolder}}
+                            <ggrc-gdrive-picker-launcher
+                                    instance="instance"
+                                    {items-uploaded-callback}="@loadDocuments"
+                                    click_event="trigger_upload">
+                                    Attach
+                            </ggrc-gdrive-picker-launcher>
+                        {{/unless}}
+                    {{/if}}
                 {{else}}
-                    The GDrive folder for this evidence could not be accessed.
-                    {{#using request=parent_instance.request}}
-                        {{{render '/static/mustache/gdrive/gapi_errors.mustache' type="file" instance=request error=error}}}
-                    {{/using}}
-                {{/if}}
-            {{/with_mapping}}
-        </span>
-    {{/is_allowed}}
-{{/unless}}
+                {{! This is a failure state for with_mapping, if something in the mapping doesn't refresh properly }}
+                    {{#if error.errors}}
+                        <small>
+                            You need permission to upload files to the audit folder.
+                            <a href="https://drive.google.com/folderview?id={{grdive_msg_to_id error.message}}&amp;usp=sharing#">Request access.</a>
+                        </small>
+                    {{else}}
+                        The GDrive folder for this evidence could not be accessed.
+                        {{#using request=parent_instance.request}}
+                            {{{render '/static/mustache/gdrive/gapi_errors.mustache' type="file" instance=request error=error}}}
+                        {{/using}}
+                    {{/if}}
+                {{/with_mapping}}
+            </span>
+        {{/is_allowed}}
+    {{/unless}}
+</related-documents>
