--- a/src/ggrc/assets/mustache/base_objects/unmap.mustache
+++ b/src/ggrc/assets/mustache/base_objects/unmap.mustache
@@ -7,7 +7,13 @@
     {{#is_allowed_to_map instance page_instance}}
       {{^is_dashboard_or_all}}
         <li class="border">
-            <unmap-button {source}="parentInstance" {destination}="instance" class="unmap-link">
+            <unmap-button {source}="parentInstance"
+            {{#if instance.snapshot}}
+              {destination}="instance.snapshot"
+            {{else}}
+              {destination}="instance"
+            {{/if}}
+            class="unmap-link">
                 <i class="fa fa-ban"></i>Unmap
             </unmap-button>
         </li>
