--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -35,3 +35,5 @@
 @import "components/auto-save-form/auto-save-form";
 @import "components/attachment-upload-control/attachment-upload-control";
 @import "components/action-toolbar/action-toolbar";
+@import "components/form/editable-form";
+@import "components/people-group/people-group";
