--- a/src/ggrc/assets/stylesheets/components/action-toolbar/_action-toolbar.scss
+++ b/src/ggrc/assets/stylesheets/components/action-toolbar/_action-toolbar.scss
@@ -1,18 +1,28 @@
 /*
- * Copyright (C) 2017 Google Inc.
- * Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
- */
+* Copyright (C) 2017 Google Inc.
+* Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
+*/
 
 .action-toolbar {
   position: relative;
   display: flex;
 
+  &:hover {
+    .action-toolbar__controls {
+      display: flex;
+    }
+  }
+
   &__controls {
-    display: flex;
+    display: none;
     flex-direction: row;
+    align-items: flex-start;
     position: relative;
-    top: -4px;
     min-width: 0;
+
+    a {
+      min-width: 30px;
+    }
   }
 
   &__content-item {
@@ -27,12 +37,12 @@
     height: 28px;
     width: 28px;
     border-radius: 14px;
-    background: #333;
+    background: #7c7c7c;
     cursor: pointer;
     margin: 0 0 0 8px;
 
     &:hover {
-      background: darken(#333, 10%);
+      background: darken(#555, 10%);
       box-shadow: 0 1px 10px -1px rgba(0, 0, 0, 0.4);
     }
 
@@ -40,7 +50,7 @@
       opacity: 0.25;
 
       &:hover {
-        background: #333;
+        background: #555;
         box-shadow: none;
       }
     }
@@ -48,6 +58,14 @@
     .fa {
       color: $white;
       font-size: 18px;
+      height: 28px;
+      line-height: 28px;
+      width: 28px;
+      display: inline-flex;
+      justify-content: center;
+      align-self: center;
+      align-items: center;
+      text-align: center;
     }
   }
 }
