--- a/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
+++ b/src/ggrc/assets/stylesheets/components/mapped-objects/_mapped-objects.scss
@@ -46,11 +46,11 @@ assessment-mapped-controls, assessment-mapped-related-information {
   font-size: 12px;
   color: $text;
   cursor: pointer;
+  border: 1px solid $shapshotBorder;
+  border-radius: 2px;
 
   &.mapped-snapshot-item {
     background: $snapshotBgnd;
-    border: 1px solid $shapshotBorder;
-    border-radius: 2px
   }
 
   .title {
