Simplify Action Toolbar Component

--- a/src/ggrc/assets/mustache/components/object-list-item/editable-document-object-list-item.mustache
+++ b/src/ggrc/assets/mustache/components/object-list-item/editable-document-object-list-item.mustache
@@ -4,14 +4,14 @@
 }}
 
 <action-toolbar {document}="document" class="action-toolbar">
-    <document-object-list-item {instance}="document"></document-object-list-item>
-    {{#if showAction}}
-      <div class="action-toolbar__controls">
-        {{#is_allowed 'update' instance context='for'}}
-            {{^if instance.archived}}
-                <content></content>
-            {{/if}}
-        {{/is_allowed}}
-      </div>
-    {{/if}}
+    <div class="action-toolbar__content-item">
+      <document-object-list-item {instance}="document"></document-object-list-item>
+    </div>
+    <div class="action-toolbar__controls">
+        {{#unless instance.archived}}
+          {{#is_allowed 'update' instance context='for'}}
+            <content></content>
+          {{/is_allowed}}
+        {{/unless}}
+    </div>
 </action-toolbar>
