Update Assessment Info Pane Base Styling

--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -4,6 +4,7 @@
  */
 
 @import "components/access-control-list/access-control-list";
+@import "components/info-pane/info-pane";
 @import "components/comment/comment-input";
 @import "components/comment/comment-add-form";
 @import "components/comment/comment-list";
