--- a/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
+++ b/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
@@ -28,8 +28,7 @@
             <div class="simple-modal__section-title">Evidence</div>
             <related-documents {instance}="instance" document-type="EVIDENCE">
               <object-list {items}="documents" {empty-message}="noItemsText">
-                  <editable-document-object-list-item {document}="{.}">
-                  </editable-document-object-list-item>
+                  <document-object-list-item {instance}="{.}"></document-object-list-item>
               </object-list>
                 <attach-button (refresh-evidences)="loadDocuments()" {instance}="instance"></attach-button>
             </related-documents>
