--- a/src/ggrc/assets/mustache/components/auto-save-form/fields/date-form-field.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/fields/date-form-field.mustache
@@ -4,5 +4,5 @@
 }}
 
 <div class="input-wrapper">
-  <datepicker date="_value" {disabled}="disabled"></datepicker>
+  <datepicker {(date)}="_value" {readonly}="readonly" {disabled}="disabled"></datepicker>
 </div>
