--- a/src/ggrc/assets/mustache/components/datepicker/datepicker.mustache
+++ b/src/ggrc/assets/mustache/components/datepicker/datepicker.mustache
@@ -18,10 +18,11 @@
     <i class="fa fa-calendar"></i>
     <input
       {{#if disabled}}disabled{{/if}}
+      {{#if readonly}}readonly{{/if}}
       placeholder="{{MOMENT_DISPLAY_FMT}}"
       type="text"
       class="datepicker__input date"
-      can-value="_date"
+      {(value)}="_date"
       can-focus="onFocus"
     >
     <div
